--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
