--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/x-charts": "^6.18.4",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
