--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.10.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
